# pxutil

./: .coveragerc  .flake8  .gitignore  .travis.yml  .travis_disabled.yml  README.md  README.rst  _README.rst  __init__.py  build.sh  noNeed__init__.py  publish.sh  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: build_test_publish.yml  build_wheel.yml  test.yml
pxutil/: __init__.py  __main__.py  chat.py  cli.py  cython_pxutil.c  cython_pxutil.pyx  pxutil.py  pxutil_cy.py  util.py
tests/: __init__.py  manual_test_pxutil.py  pytest.ini  readme.txt  requirements.txt  test_pxutil.py
