[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# This is not required by pxutil and actually causing errors in CI
# before-all = "apt install libpng-dev" 

test-requires = ["pytest", "pytest-cov"]

# Run the package tests using `pytest`
test-command = [
    "pytest -v --cov={project}/pxutil {project}/tests",
]