[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# This is not required by pxutil and actually causing errors in CI
# before-all = "apt install libpng-dev" 

# define what python versions to build, default to build all possible
# list ref: https://cibuildwheel.readthedocs.io/en/stable/options/#build-skip
# cibuildwheel does not support cp311 yet at least for cython
build = ["cp38-*", "cp39-*","cp310-*", "cp311-*", "cp312-*"]
# build = "cp312-*"
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686"]

test-requires = ["pytest", "pytest-cov"]

# Run the package tests using `pytest`
test-command = [
    "pytest -v --cov={project}/pxutil {project}/tests",
    # "pytest -v {project}/tests",
]

[tool.pyright]
# exclude = ["some dir",]